[project]
name = "mcp-langchain-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.4.4",
    "ipykernel>=7.3.0",
    "langchain>=1.3.12",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.4",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.9",
    "langsmith>=0.10.2",
    "mcp>=1.28.1",
    "python-dotenv>=1.2.2",
]
